2020-05-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.y,
	  src/SDCCerr.h,
	  src/SDCCerr.c,
	  support/valdiag/tests/enum.c,
	  support/regression/tests/enum.c:
	  Fix handling of trailing comma after enumerator list.

2020-05-10 Philipp Klaus Krause <pkk AT spth.de>

	* support/scripts/sdcc.nsi:
	  Fix bug #2972 for tlcs90.
	* support/valdiag/Makefile.in:
	  Fix bug #2971.
	* src/SDCC.y,
	  src/SDCCerr.h,
	  src/SDCCerr.c:
	  Align grammar more closely with C2X draft N2479.

2020-05-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix bug #3001.

2020-05-05 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/asz80/z80.h,
	  sdas/asz80/z80mch.c,
	  sdas/asz80/z80pst.c:
	  Remove Z80N MMU instruction support.

2020-05-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/peep.c:
	  Implement RFE #676.
	* device/lib/pic16/libc/stdlib/g_ftoa.S,
	  device/lib/pic16/libc/utils/cvtdec.S:
	  Fix bug #3000 (patch by Roy Rankin).

2020-05-03 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/asz80/z80mch.c,
	  src/z80/gen.c,
	  src/z80/peep.c:
	  Support Z80N mlt and swap instructions, part of RFE #573, #656.

2020-05-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve stack parameter pushing, overlaps with RFE #676.

2020-05-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix a bug in pushing on-stack-parameters on r2k.

2020-05-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/ralloc2.cc:
	  Improve ifx on 8-bit value (remaining part of RFE #668).

2020-05-02 Philipp Klaus Krause <pkk AT spth.de>

	* Merge z80n branch.

2020-05-02 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-pr88714.c:
	  Bug #2949 wasn't a bug, just lack of RAM resulting in a stack overflow.

2020-04-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Improve pointer write on rematerialized stack location.

2020-04-29 Philipp Klaus Krause <pkk AT spth.de>
